--- a/_includes/head.html
+++ b/_includes/head.html
@@ -83,7 +83,7 @@
   <link rel="stylesheet" href="{{ site.data.origin[type].fontawesome.css | relative_url }}">
 
   <!-- iconfont -->
-  <link rel="stylesheet" href="//at.alicdn.com/t/c/font_4947802_1f1g2tbkp4.css">
+  <link rel="stylesheet" href="https://at.alicdn.com/t/c/font_4947802_1f1g2tbkp4.css">
 
   <!-- 3rd-party Dependencies -->
 
